# interview-doctor

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: redis.py
backend/app/providers/: base.py  http.py  registry.py
backend/app/providers/llm/: anthropic.py  base.py  mock.py  openai.py
backend/app/providers/stt/: base.py  deepgram.py  mock.py  smallest_ai.py  whisper.py
backend/app/providers/tts/: base.py  cartesia.py  elevenlabs.py  mock.py  smallest_ai.py
backend/app/routers/: api.py  sessions.py
backend/app/schemas/: common.py  session.py
backend/app/stores/: sessions.py
frontend/: .dockerignore  Dockerfile  components.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: sessions.ts  turns.ts
frontend/app/domain/session/: page.tsx
frontend/app/domain/setup/: page.tsx
frontend/app/dsa/session/: page.tsx
frontend/app/dsa/setup/: page.tsx
frontend/app/resume/session/: page.tsx
frontend/app/resume/setup/: page.tsx
frontend/components/interview/: landing-header.tsx  mode-card.tsx  session-page.tsx  session-turn-panel.tsx  setup-page.tsx
frontend/components/interview/setup/: form-controls.tsx  (+4 more)
frontend/constants/: api.ts  app.ts  interview-modes.ts  providers.ts  routes.ts  session.ts  setup.ts
frontend/lib/: interview-options.ts  provider-selection.ts  session-setup.ts
frontend/lib/api/: sessions.ts
frontend/lib/schemas/: interview.ts  session.ts
